crates/icydb-core/tests/ui/db/value_is_runtime_only_not_slot_codec.stderr
error[E0277]: the trait bound `icydb_core::value::Value: PersistedFieldSlotCodec` is not satisfied
 --> tests/ui/db/value_is_runtime_only_not_slot_codec.rs:6:25
  |
6 |     assert_slot_codec::<Value>();
  |                         ^^^^^ the trait `PersistedFieldSlotCodec` is not implemented for `icydb_core::value::Value`
  |
  = help: the following other types implement trait `PersistedFieldSlotCodec`:
            ()
            BTreeMap<K, V>
            BTreeSet<T>
            Nat
            Nat128
            Vec<T>
            bool
            i16
          and $N others
note: required by a bound in `assert_slot_codec`
 --> tests/ui/db/value_is_runtime_only_not_slot_codec.rs:3:25
  |
3 | fn assert_slot_codec<T: PersistedFieldSlotCodec>() {}
  |                         ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_slot_codec`
